[gd_scene load_steps=2 format=3 uid="uid://ln3f00o6jh0u"]

[ext_resource type="Script" path="res://characters/components/ranged_attack_component.gd" id="1_2tnwl"]

[node name="RangedAttackComponent" type="Node2D"]
script = ExtResource("1_2tnwl")

[node name="CooldownTimer" type="Timer" parent="."]

[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_ended"]
